--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
           <button class="search-btn" type="submit">Search</button>
         </form>
         <ul class="gallery"></ul>
+        <div class="loader-box visually-hidden">
+          <span class="loader"></span>
+        </div>
       </div>
     </main>
 
